# aspen-vpn

./: README.md  cleanup.sh  client-private.key  docker-compose.yaml  pyproject.toml  requirements.txt  server-public.key  server_tests.rest  setup_server.sh  setup_wg0.sh  testing.md  vpn.db  wg0.conf
client/: gui.py  main.py
server/: Dockerfile  config.py  db_manager.py  main.py  proxy_setup.py  wireguard.py
server/crud/: invite.py  peer.py
server/database/: models.py  session.py
server/routes/: health.py  invites.py  peers.py
server/schemas/: invite.py  peer.py
server/services/: ip_manager.py
shared/: README.md
tests/: integration_test.py  test_client.py  test_server.py
wg0s/client/: wg0.conf
